@@ -6,8 +6,8 @@
     "ck_version": 10,
     "env_prefix": "CK_ENV_LIB_MPI",
     "limit_recursion_dir_search": {
-      "linux": 3,
-      "win": 3
+      "linux": 4,
+      "win": 4
     },
     "soft_file": {
       "linux": "libmpi.so",
